@@ -1,6 +1,6 @@
 /*
  * cups - Python bindings for CUPS
- * Copyright (C) 2002, 2005, 2006  Tim Waugh <twaugh@redhat.com>
+ * Copyright (C) 2002, 2005, 2006, 2008  Tim Waugh <twaugh@redhat.com>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -29,4 +29,6 @@ extern PyTypeObject cups_DestType;
 extern PyObject *HTTPError;
 extern PyObject *IPPError;
 
+void Connection_begin_allow_threads (void *connection);
+void Connection_end_allow_threads (void *connection);
 #endif /* HAVE_CUPSCONNECTION_H */
