@@ -1,3 +1,15 @@
+2008-11-12  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection): Store thread state in Connection
+	data.
+	(Connection_begin_allow_threads): Save current thread state.
+	(Connection_end_allow_threads): Restore current thread state.
+	(Connection_init): Use new functions.
+	(Connection_getPPDs): Likewise.
+	(Connection_getServerPPD): Likewise.
+	(Connection_getDocument): Likewise.
+	(Connection_getDevices): Likewise.
+
 2008-08-28  Tim Waugh  <tim@localhost.localdomain>
 
 	* cupsconnection.c (Connection_methods): Documentation fix for
